<resources>
    <string name="app_name">易运宝物流</string>
    <string name="progress_loading">正在加载...</string>
    <string name="progress_loading_2">正在加载,请稍后...</string>
    <string name="string_title_login">登录</string>
    <string name="string_titlebar_back">返回</string>
    <string name="string_titlebar_share">礼品</string>
    <string name="string_login_phone">手机号</string>
    <string name="string_login_password">密码</string>
    <string name="string_title_online_source">在途货源</string>
    <string name="string_province">省份</string>
    <string name="string_city">城市</string>
    <string name="string_tips_select">请选择</string>
    <string name="string_car_number">你共有%s辆车</string>
    <string name="string_main_home">首页</string>
    <string name="string_main_share">分享</string>
    <string name="string_main_search">搜索</string>
    <string name="string_main_publish">发布</string>
    <string name="string_main_tool">工具</string>
    <string name="string_main_other">我的</string>
    <string name="string_title_register">注册</string>
    <string name="string_register_getverifycode">获取验证码</string>
    <string name="string_tips_password">密码</string>
    <string name="string_tips_password2">确认密码</string>
    <string name="string_tips_verifycode">输入验证码</string>
    <string name="string_tips_length">车长</string>
    <string name="string_tips_type">车型</string>
    <string name="string_tips_weight">载重</string>
    <string name="string_tips_number">车牌号</string>
    <string name="string_tips_myself_recommendation">自我推荐</string>
    <string name="string_register_line">线路：</string>
    <string name="string_register_choice">选填</string>
    <string name="string_register_arrow">同意协议</string>
    <string name="string_register_kg">吨</string>
    <string name="string_register_mi">米</string>
    <string name="string_register_phone">随车手机</string>
    <string name="string_register_name">姓名</string>
    <string name="string_register_recommender">推荐人帐号</string>
    <string name="string_register_click_skan">点击可进入查看协议</string>
    <string name="string_register_complete_title">完善资料</string>
    <string name="string_tips_optional_driver_name">司机姓名</string>
    <string name="string_tips_optional_ower_phone">车主电话</string>
    <string name="string_tips_optional_card">身份证</string>
    <string name="string_tips_optional_card_name">姓名：</string>
    <string name="string_tips_optional_card_number">编号：</string>
    <string name="string_tips_optional_registration">行驶证</string>
    <string name="string_tips_optional_registration_name">姓名：</string>
    <string name="string_tips_optional_registration_number">编号：</string>
    <string name="string_tips_optional_license">驾驶证</string>
    <string name="string_tips_optional_license_name">姓名：</string>
    <string name="string_tips_optional_license_number">编号：</string>
    <string name="string_tips_optional_dump">跳过</string>
    <string name="string_tips_optional_submit">提交</string>
    <string name="string_car_img">车辆照片</string>
    <string name="string_forget_tips">输入注册手机号码</string>
    <string name="string_forget_submit">提交</string>
    <string name="string_register_new_password">新密码</string>
    <string name="string_register_new_password2">确认新密码</string>
    <string name="string_forget">找回密码</string>
    <string name="string_forget_info">输入注册手机号码</string>
    <string name="string_forgot_submit">提交</string>
    <string name="string_register_wait">%s秒后可重新获取</string>
    <string name="string_register_verifycode">验证码</string>
    <string name="string_register_shipper_phone">请填写注册手机号</string>
    <string name="string_register_company_name">请填写注册公司名</string>
    <string name="string_update_oldpwd">请输入初始密码</string>
    <string name="string_update_newpwd">请输入新密码</string>
    <string name="string_update_newpwd2">请再次输入新密码</string>
    <string name="string_update_submit">提交</string>
    <string name="string_update_title">修改密码</string>
    <string name="string_update_pay_title">修改支付密码</string>
    <string name="string_car_detail_number">车牌号\t\t\t\t%s</string>
    <string name="string_car_detail_contact">联系人\t\t\t\t%s</string>
    <string name="string_car_detail_card_num">车架号\t\t\t\t%s</string>
    <string name="string_car_detail_engine_number">发动机号\t\t\t%s</string>
    <string name="string_car_detail_frame_car_number">车挂车架号\t\t%s</string>
    <string name="string_car_detail_car_registration_number">车挂号\t\t\t\t%s</string>
    <string name="string_car_detail_car_length">车长\t\t\t\t%s米</string>
    <string name="string_car_detail_car_type">车型\t\t\t\t%s</string>
    <string name="string_car_detail_car_weight">载重\t\t\t\t%s吨</string>
    <string name="string_info_login_auto">自动登录</string>
    <string name="string_info_login_forget">忘记密码?</string>
    <string name="string_home_source_grab">抢单</string>
    <string name="string_home_source_cancelgrab">取消抢单</string>
    <string name="string_title_newsource">新货源</string>
    <string name="string_info_forget_title">忘记密码</string>
    <string name="string_home_business_card">货运名片</string>
    <string name="string_home_myabc_title">个人中心</string>
    <string name="string_home_myabc_title_info">个人资料</string>
    <string name="string_is_ring">铃声提醒(%s)</string>
    <string name="string_money_manager">财务管理</string>
    <string name="account_info_open">此标记为已公开</string>
    <string name="string_home_myabc_title_name">姓\t\t名：</string>
    <string name="string_home_myabc_title_name_driver">车主姓名：</string>
    <string name="string_home_myabc_title_carnum">车牌号码：</string>
    <string name="string_home_myabc_title_phone">手机号码：</string>
    <string name="string_home_myabc_title_car_number">身份证号：</string>
    <string name="string_home_myabc_title_account_name">运宝账号：</string>
    <string name="string_home_myabc_title_tel">座机号码：</string>
    <string name="string_home_myabc_title_recommend">推荐人帐号：</string>
    <string name="string_home_myabc_title_myaccount">我的账户</string>
    <string name="string_home_myabc_title_history">我的历史订单</string>
    <string name="string_home_myabc_title_history1">历史订单</string>
    <string name="string_home_myabc_title_share">分享</string>
    <string name="string_home_myabc_title_updatepwd">密码修改</string>
    <string name="string_home_myabc_title_forgetpwd">忘记密码</string>
    <string name="string_home_myabc_title_over">账户余额</string>
    <string name="string_home_myabc_title_recharge">帐号充值</string>
    <string name="string_home_myabc_title_ranking">排名</string>
    <string name="string_home_myabc_title_onlinetime">在线时间</string>
    <string name="string_home_myabc_title_recommendcount">推荐人数</string>
    <string name="string_home_myabc_title_clinch">成交单数</string>
    <string name="string_home_myabc_title_mycredit">我的信誉</string>
    <string name="string_home_myabc_title_creditdetail">信誉记录</string>
    <string name="string_home_myabc_title_setting">系统设置</string>
    <string name="string_home_myabc_title_checkversion">检查更新</string>
    <string name="string_home_myabc_title_about">关&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;于</string>
    <string name="string_home_myabc_title_advice">意见反馈</string>
    <string name="string_home_myabc_complete">完善资料</string>
    <string name="string_home_myabc_logout">退出登录</string>
    <string name="string_home_myabc_rank">排名%d位</string>
    <string name="string_home_myabc_balance">现金余额&lt;font color=&quot;#0C9D56&quot;&gt;%1$.2f&lt;/font&gt;元\t\t冻结金额&lt;font color=&quot;#FE5722&quot;&gt;%2$s&lt;/font&gt;元</string>
    <string name="string_home_myabc_yunbao_gold">运宝币余额&lt;font color=&quot;#0C9D56&quot;&gt;%1$s&lt;/font&gt;元\t\t冻结金额&lt;font color=&quot;#FE5722&quot;&gt;%2$s&lt;/font&gt;元</string>
    <string name="string_home_sourcedetail_title">新货源详情</string>
    <string name="string_home_sourcedetail_line">线路：</string>
    <string name="string_home_sourcedetail_name">货物名称：</string>
    <string name="string_home_sourcedetail_style">货物类型：</string>
    <string name="string_home_sourcedetail_space">体积重量：</string>
    <string name="string_home_sourcedetail_weight">货物重量：</string>
    <string name="string_home_sourcedetail_price">运输总价：</string>
    <string name="string_home_sourcedetail_needtype">需要车型：</string>
    <string name="string_home_sourcedetail_uploadtime">装车时间：</string>
    <string name="string_home_sourcedetail_validtime">有效时间：</string>
    <string name="string_home_sourcedetail_remark">补充说明：</string>
    <string name="string_home_sourcedetail_img">货源图片：</string>
    <string name="string_home_sourcedetail_evaluate">信誉评价：</string>
    <string name="string_home_sourcedetail_grab">抢单</string>
    <string name="string_home_sourcedetail_attention">关注货主为好友</string>
    <string name="string_home_sourcedetail_needtime">所用时间：</string>
    <string name="string_home_sourcedetail_true">发货信息准确度：</string>
    <string name="string_home_sourcedetail_integrity">履约诚信度：</string>
    <string name="string_home_sourcedetail_timely">付款及时率：</string>
    <string name="string_home_sourcedetail_detail">详细评价</string>
    <string name="sourcedetail_weight">%s吨</string>
    <string name="sourcedetail_number">订单号:%s</string>
    <string name="sourcedetail_price">%s元</string>
    <string name="sourcedetail_validtime">有效时间:%s</string>
    <string name="string_home_unmatched_title">待定货源</string>
    <string name="string_unmatched_nums">目前有&lt;font color=&quot;#ffab33&quot;&gt;%d&lt;/font&gt;位司机抢单</string>
    <string name="string_home_onlinesource_contact">联系货主</string>
    <string name="string_home_onlinesource_chat">在线聊天</string>
    <string name="string_home_onlinesource_evaluate">评价</string>
    <string name="chejiahao">车架编号\t\t\t%s</string>
    <string name="lianxiren">联系人\t\t\t\t%s</string>
    <string name="lianxidianhua">联系电话\t\t\t%s</string>
    <string name="jiatingdianhua">家庭电话\t\t\t%s</string>
    <string name="yinhangmingcheng">银行名称\t\t\t%s</string>
    <string name="shoukuankahao">收款卡号\t\t\t%s</string>
    <string name="address">现住地址\t\t\t%s</string>
    <string name="source_number">今日共有%s条货源</string>
    <string name="string_home_newsource_order_number">货源号:%s</string>
    <string name="string_home_newsource_order_money">保证金:&lt;font color=&quot;#FE5722&quot;&gt; %s &lt;/font&gt;元</string>
    <string name="string_home_newsource_order_evaluate">发货方信誉评价</string>
    <string name="string_home_newsource_order_evaluate_new">此货被多少人查看：200</string>
    <string name="string_share_title">分享</string>
    <string name="string_share_tips">兄弟，快去下载个易运宝找货软件，货很多，还不收费，有很多好的货源。点http://56dp.cn/1.apk 就能下载！赚钱了，请我吃饭！</string>
    <string name="string_share_card_tips">兄弟，快去下载个易运宝找货软件，货很多，还不收费，有很多好的货源。点http://56dp.cn/1.apk 就能下载！赚钱了，请我吃饭！</string>
    <string name="string_share_send">点击发送</string>
    <string name="string_share_please_choose">请选择您好友的手机号码</string>
    <string name="string_home_share_title_hint">请输入姓名或者手机号码查询</string>
    <string name="string_onlinesource_from">发货方：%s</string>
    <string name="string_onlinesource_send">送货方：%s</string>
    <string name="string_onlinesource_tips">点击下方图标上传状态</string>
    <string name="string_onlinesource_state1">到达装货位置</string>
    <string name="string_onlinesource_state2">启程</string>
    <string name="string_onlinesource_state3">在途</string>
    <string name="string_onlinesource_state4">到达目的地</string>
    <string name="string_onlinesource_state5">卸货</string>
    <string name="string_onlinesource_state6">回单密码</string>
    <string name="string_onlinesource_location">汇报位置</string>
    <string name="string_home_chat_title">聊天</string>
    <string name="string_home_chat_presstosay">按住聊天</string>
    <string name="string_other_recharge_phone">手机号码:</string>
    <string name="string_other_recharge_price">充值金额:</string>
    <string name="string_other_recharge_type">支付方式</string>
    <string name="string_other_recharge_info">提示：充值金额将按照1：1的比例，直接兑换成物流币充入登录账户</string>
	<string name="user_driver">司机</string>
	<string name="user_shipper">货主</string>
	<string name="help_tel_tip">咨询热线：</string>
	<string name="help_tel">"400-876-5156"</string>
    <string name="fast_enter"><u>直接进入</u></string>
</resources>