<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.maogousoft.logisticsmobile.driver.widget.HeaderView android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/forget_phone"
                style="@style/info_edittext_style"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/login_phone"
                android:drawablePadding="5dp"
                android:hint="@string/string_forget_info"
                android:inputType="phone"
                android:maxLength="11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/forget_authentication"
                    style="@style/info_edittext_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/login_number"
                    android:drawablePadding="5dp"
                    android:hint="@string/string_register_verifycode"
                    android:inputType="number"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/forget_authentication_bty"
                    style="@style/button1_style2"
                    android:layout_gravity="center"
                    android:layout_marginRight="0dp"
                    android:minWidth="160dip"
                    android:text="@string/string_register_getverifycode" />
            </LinearLayout>

            <EditText
                android:id="@+id/forget_password1"
                style="@style/info_edittext_style"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/login_pwd"
                android:drawablePadding="5dp"
                android:hint="@string/string_register_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/forget_password2"
                style="@style/info_edittext_style"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/login_pwd"
                android:drawablePadding="5dp"
                android:hint="@string/string_register_new_password2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/forget_submitbtn"
                style="@style/button1_style"
                android:layout_marginTop="10dp"
                android:text="@string/string_forgot_submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>